--- a/BC.Common/workspace/package.json
+++ b/BC.Common/workspace/package.json
@@ -9,7 +9,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "nswag-master-list": "nswag run ./projects/bc-common/src/lib/api-client/master-list/nswag.json",
-    "nswag-authentication": "nswag run ./projects/bc-common/src/lib/api-client/authentication/nswag.json"
+    "nswag-authentication": "nswag run ./projects/bc-common/src/lib/api-client/authentication/nswag.json",
+
+    "start-bc-client": "ng run bc-client:serve --port=9999",
+    "build-bc-common": "ng build bc-common"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +25,9 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ionic/angular": "^5.3.5",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
