--- a/BC.Common/workspace/package.json
+++ b/BC.Common/workspace/package.json
@@ -8,9 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "nswag-master-list": "nswag run ./projects/bc-common/src/lib/api-client/master-list/nswag.json",
-    "nswag-authentication": "nswag run ./projects/bc-common/src/lib/api-client/authentication/nswag.json",
-
+    "nswag-master-list": "nswag run ./projects/bc-client/src/app/api-client/master-list/nswag.json",
+    "nswag-authentication": "nswag run ./projects/bc-client/src/app/api-client/authentication/nswag.json",
+    "nswag-booking": "nswag run ./projects/bc-client/src/app/api-client/booking/nswag.json",
     "start-bc-client-local-01": "ng run bc-client:serve:local-01",
     "start-bc-client-local-02": "ng run bc-client:serve:local-02",
     "start-bc-client": "ng run bc-client:serve",
@@ -34,6 +34,7 @@
     "@ionic/angular-toolkit": "^2.3.3",
     "@ionic/app-scripts": "^3.2.4",
     "@ionic/cli": "^6.11.12",
+    "ionicons": "^5.2.3",
     "ngx-cookie-service": "^10.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
