--- a/BC.Common/workspace/angular.json
+++ b/BC.Common/workspace/angular.json
@@ -57,7 +57,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/bc-client",
+            "outputPath": "www",
             "index": "projects/bc-client/src/index.html",
             "main": "projects/bc-client/src/main.ts",
             "polyfills": "projects/bc-client/src/polyfills.ts",
@@ -114,7 +114,7 @@
                 }
               ]
             },
-            "local-01": {
+            "client.local-01": {
               "fileReplacements": [
                 {
                   "replace": "projects/bc-client/src/environments/environment.ts",
@@ -122,7 +122,7 @@
                 }
               ]
             },
-            "local-02": {
+            "client.local-02": {
               "fileReplacements": [
                 {
                   "replace": "projects/bc-client/src/environments/environment.ts",
