Docker for new client workd

--- a/docker-compose.local-02.yml
+++ b/docker-compose.local-02.yml
@@ -24,7 +24,7 @@ services:
       - "5251:15672"
   bc-client:
     build:
-      dockerfile: "BC.Client/Dockerfile.Local-02"
+      dockerfile: "BC.Common/Dockerfile.Client.Local-02"
     ports:
       - "5261:80"
   #  master:
