--- a/BC.Common/Dockerfile.Client.Local-01
+++ b/BC.Common/Dockerfile.Client.Local-01
@@ -30,5 +30,5 @@ ENV NG_ENV local-01
 
 WORKDIR /app
 COPY --from=publish /app/publish .
-COPY --from=publish /src/BC.Common/workspace ./workspace
+COPY --from=publish /src/BC.Common/workspace/dist/bc-client ./workspace/dist/bc-client
 ENTRYPOINT ["dotnet", "BC.Common.dll"]
