fix rabbitmq settings and add routes to ocelot.json

--- a/BC.API/appsettings.Local-01.json
+++ b/BC.API/appsettings.Local-01.json
@@ -6,7 +6,8 @@
     "BalanceContext": "Server=.,5230;Database=BC;User Id=sa;Password=Password123;"
   },
   "RabbitMQEventBus": {
-    "Host": "localhost:5240",
+    "Host": "localhost",
+    "Port": "5240",
     "UserName": "guest",
     "Password": "guest",
     "Exchange": "beauty-circle-exchange"
