--- a/BC.API/appsettings.Local-02.json
+++ b/BC.API/appsettings.Local-02.json
@@ -6,7 +6,8 @@
     "BalanceContext": "Server=.,5231;Database=BC;User Id=sa;Password=Password123;"
   },
   "RabbitMQEventBus": {
-    "Host": "localhost:5241",
+    "Host": "localhost",
+    "Port": "5241",
     "UserName": "guest",
     "Password": "guest",
     "Exchange": "beauty-circle-exchange"
