--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -14,6 +14,7 @@
   },
   "RabbitMQEventBus": {
     "Host": "localhost",
+    "Port": "5240",
     "UserName": "guest",
     "Password": "guest",
     "Exchange": "beauty-circle-exchange"
