--- a/docker-compose.local-01.yml
+++ b/docker-compose.local-01.yml
@@ -13,6 +13,8 @@ services:
       - ConnectionStrings__MastersContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
       - ConnectionStrings__BookingContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
       - Services__MastersList__FilesServiceUrl=http://gateway/api/files
+      - RabbitMQEventBus__Host=rabbitmq
+      - RabbitMQEventBus__Port=5672
       - ASPNETCORE_URLS=http://+:80
   sql-server:
     ports:
