--- a/BC.API/BC.API.csproj
+++ b/BC.API/BC.API.csproj
@@ -93,6 +93,7 @@
     <ItemGroup>
       <Folder Include="Data" />
       <Folder Include="Services\AuthenticationService\Data\Migrations" />
+      <Folder Include="Services\BookingService\Data\Migrations" />
       <Folder Include="Services\BookingService\Handlers" />
       <Folder Include="Services\ImagesProcessorService\Controllers" />
       <Folder Include="Services\ImagesProcessorService\Handlers" />
