--- a/BC.Common/workspace/package.json
+++ b/BC.Common/workspace/package.json
@@ -18,15 +18,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
+    "@angular/animations": "^10.0.5",
     "@angular/cli": "^10.1.7",
-    "@angular/common": "~10.0.5",
-    "@angular/compiler": "~10.0.5",
-    "@angular/core": "~10.0.5",
-    "@angular/forms": "~10.0.5",
-    "@angular/platform-browser": "~10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.5",
-    "@angular/router": "~10.0.5",
+    "@angular/common": "^10.0.5",
+    "@angular/compiler": "^10.0.5",
+    "@angular/core": "^10.0.5",
+    "@angular/forms": "^10.0.5",
+    "@angular/platform-browser": "^10.0.5",
+    "@angular/platform-browser-dynamic": "^10.0.5",
+    "@angular/router": "^10.0.5",
     "@ionic-native/core": "^5.28.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
@@ -36,30 +36,31 @@
     "@ionic/cli": "^6.11.12",
     "ionicons": "^5.2.3",
     "ngx-cookie-service": "^10.1.1",
-    "rxjs": "~6.5.5",
+    "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "^0.10.3",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.5",
-    "@angular-devkit/build-ng-packagr": "~0.1000.5",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular-devkit/build-ng-packagr": "^0.1000.5",
     "@angular-devkit/schematics": "^10.1.7",
-    "@angular/compiler-cli": "~10.0.5",
+    "@angular/compiler-cli": "^10.0.5",
     "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^3.5.0",
+    "@types/jasminewd2": "^2.0.3",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.0",
+    "karma": "^5.0.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.2",
+    "karma-jasmine": "^3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^10.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "protractor": "^7.0.0",
+    "ts-node": "^8.3.0",
+    "tslint": "^6.1.0",
+    "typescript": "^3.9.5"
   }
 }
