--- a/BC.Common/Dockerfile.Client.Local-02
+++ b/BC.Common/Dockerfile.Client.Local-02
@@ -8,11 +8,10 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV NG_PROJ bc-client
 ENV NG_ENV local-02
 
-RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
-RUN curl -sL https://deb.nodesource.com/setup_13.x | bash
-RUN apt-get install -y --no-install-recommends nodejs
-RUN apt-get install -y gcc g++ build-essential
-RUN npm i -g npm@latest
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash
+RUN apt-get install -y nodejs
+RUN apt-get install -y gcc g++ make
+
 WORKDIR /src
 COPY . .
 WORKDIR /src/BC.Common
