--- a/BC.Common/Dockerfile.Master.Local-01
+++ b/BC.Common/Dockerfile.Master.Local-01
@@ -8,10 +8,10 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV NG_PROJ bc-master
 ENV NG_ENV local-01
 
-RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
-RUN curl -sL https://deb.nodesource.com/setup_13.x | bash
-RUN apt-get install -y --no-install-recommends nodejs
-RUN npm i -g npm@latest
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash
+RUN apt-get install -y nodejs
+RUN apt-get install -y gcc g++ make
+
 WORKDIR /src
 COPY . .
 WORKDIR /src/BC.Common
