Add process avatar saga

--- a/BC.API/appsettings.Local-01.json
+++ b/BC.API/appsettings.Local-01.json
@@ -21,7 +21,8 @@
   },
   "Services": {
     "MastersList": {
-      "FilesServiceUrl": "http://localhost:5210/api/files"
+      "FilesServiceInternalUrl": "http://localhost:5210/api/files",
+      "FilesServicePublicUrl": "http://localhost:5210/api/files"
     }
   }
 }
