--- a/BC.API/appsettings.Local-02.json
+++ b/BC.API/appsettings.Local-02.json
@@ -21,8 +21,8 @@
   },
   "Services": {
     "MastersList": {
-      "FilesServiceInternalUrl": "http://localhost:5211/api/files",
-      "FilesServicePublicUrl": "http://localhost:5211/api/files"
+      "FilesServiceInternalUrl": "http://localhost:5211/api/files/",
+      "FilesServicePublicUrl": "http://localhost:5211/api/files/"
     }
   }
 }
