--- a/docker-compose.local-02.yml
+++ b/docker-compose.local-02.yml
@@ -13,8 +13,8 @@ services:
       - ConnectionStrings__MastersContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
       - ConnectionStrings__BookingContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
       - ConnectionStrings__BalanceContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
-      - Services__MastersList__FilesServiceInternalUrl=http://gateway/api/files
-      - Services__MastersList__FilesServicePublicUrl="http://localhost:5211/api/files"
+      - Services__MastersList__FilesServiceInternalUrl=http://gateway/api/files/
+      - Services__MastersList__FilesServicePublicUrl="http://localhost:5211/api/files/"
       - RabbitMQEventBus__Host=rabbitmq
       - RabbitMQEventBus__Port=5672
       - ASPNETCORE_URLS=http://+:80
