--- a/BC.API/BC.API.csproj
+++ b/BC.API/BC.API.csproj
@@ -17,6 +17,7 @@
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.5.1" />
+      <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     </ItemGroup>
 
