refactor some logic in FilesService client and add env to docker composes

--- a/BC.API/appsettings.Local-01.json
+++ b/BC.API/appsettings.Local-01.json
@@ -23,6 +23,10 @@
     "MastersList": {
       "FilesServiceInternalUrl": "http://localhost:5210/api/files/",
       "FilesServicePublicUrl": "http://localhost:5210/api/files/"
+    },
+    "FileServiceClient": {
+      "FilesServiceInternalUrl": "http://localhost:5210/api/files/",
+      "FilesServicePublicUrl": "http://localhost:5210/api/files/"
     }
   }
 }
