Init feedback service

--- a/BC.API/appsettings.Local-02.json
+++ b/BC.API/appsettings.Local-02.json
@@ -3,7 +3,8 @@
     "AuthenticationContext": "Server=.,5231;Database=BC;User Id=sa;Password=Password123;",
     "MastersContext": "Server=.,5231;Database=BC;User Id=sa;Password=Password123;",
     "BookingContext": "Server=.,5231;Database=BC;User Id=sa;Password=Password123;",
-    "BalanceContext": "Server=.,5231;Database=BC;User Id=sa;Password=Password123;"
+    "BalanceContext": "Server=.,5231;Database=BC;User Id=sa;Password=Password123;",
+    "FeedbackContext": "Server=.,5231;Database=BC;User Id=sa;Password=Password123;"
   },
   "RabbitMQEventBus": {
     "Host": "localhost",
