add BuildPublicUrl to FilesServiceClient and rewrite file service ports in config

--- a/BC.API/appsettings.Local-01.json
+++ b/BC.API/appsettings.Local-01.json
@@ -21,7 +21,7 @@
   },
   "Services": {
     "FileServiceClient": {
-      "FilesServiceInternalUrl": "http://localhost:5210/api/files/",
+      "FilesServiceInternalUrl": "http://localhost:5220/files/",
       "FilesServicePublicUrl": "http://localhost:5210/api/files/"
     }
   }
