Init clients dependency injection

--- a/BC.API/appsettings.Local-02.json
+++ b/BC.API/appsettings.Local-02.json
@@ -13,17 +13,15 @@
     "Password": "guest",
     "Exchange": "beauty-circle-exchange"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "Services": {
     "MastersList": {
       "FilesServiceInternalUrl": "http://localhost:5211/api/files/",
       "FilesServicePublicUrl": "http://localhost:5211/api/files/"
     }
+  },
+  "ApiClientsUrls": {
+    "Authentication": "http://localhost:5224/authentication",
+    "MastersList": "http://localhost:5224/masters-list",
+    "Booking": "http://localhost:5224/booking"
   }
 }
