--- a/docker-compose.local-01.yml
+++ b/docker-compose.local-01.yml
@@ -16,6 +16,9 @@ services:
       - ConnectionStrings__FeedbackContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
       - Services__MastersList__FilesServiceInternalUrl=http://gateway/api/files/
       - Services__MastersList__FilesServicePublicUrl="http://localhost:5210/api/files/"
+      - ApiClientsUrls__Authentication="http://bc-api/authentication"
+      - ApiClientsUrls__MastersList="http://bc-api/masters-list"
+      - ApiClientsUrls__Booking="http://bc-api/booking"
       - RabbitMQEventBus__Host=rabbitmq
       - RabbitMQEventBus__Port=5672
       - ASPNETCORE_URLS=http://+:80
