--- a/BC.Common/workspace/package.json
+++ b/BC.Common/workspace/package.json
@@ -39,7 +39,8 @@
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3",
-    "webpack": "^4.0.0"
+    "webpack": "^4.0.0",
+    "jwt-decode": "3.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.5",
