--- a/BC.API/Properties/launchSettings.json
+++ b/BC.API/Properties/launchSettings.json
@@ -18,6 +18,13 @@
         "ASPNETCORE_ENVIRONMENT": "Local-02"
       },
       "applicationUrl": "https://localhost:5225;http://localhost:5224"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
