--- a/docker-compose.local-01.yml
+++ b/docker-compose.local-01.yml
@@ -36,27 +36,13 @@ services:
     ports:
       - "5240:5672"
       - "5250:15672"
-  # bc-client:
-  #   build:
-  #     dockerfile: "BC.Common/Dockerfile.Client.Local-01"
-  #   ports:
-  #     - "5260:80"
-  # bc-master:
-  #   build:
-  #     dockerfile: "BC.Common/Dockerfile.Master.Local-01"
-  #   ports:
-  #     - "5270:80"
-  #  master:
-  #    build:
-  #      context: .
-  #      dockerfile: "BC.Master/Dockerfile"
-  #    ports:
-  #    - "5003:80"
-  #  saloon:
-  #    build:
-  #      context: .
-  #      dockerfile: "BC.Saloon/Dockerfile"
-  #    ports:
-  #    - "5004:80"
-
-
+  bc-client:
+    build:
+      dockerfile: "BC.Common/Dockerfile.Client.Local-01"
+    ports:
+      - "5260:80"
+  bc-master:
+    build:
+      dockerfile: "BC.Common/Dockerfile.Master.Local-01"
+    ports:
+      - "5270:80"
