--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,12 @@ services:
       - "./volumes/sql-server/data:/var/opt/mssql/data"
   rabbitmq:
     image: "rabbitmq:3-management"
-  # bc-client:
-  #   build:
-  #     context: .
-  # bc-master:
-  #   build:
-  #     context: .
+  bc-client:
+    build:
+      context: .
+  bc-master:
+    build:
+      context: .
   #  master:
   #    build:
   #      context: .
@@ -46,5 +46,3 @@ services:
   #      dockerfile: "BC.Saloon/Dockerfile"
   #    ports:
   #    - "5004:80"
-
-
