--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 ﻿version: '3'
 services:
   gateway:
+    restart: always
     build:
       context: .
       dockerfile: "BC.APIGateway/Dockerfile"
@@ -9,6 +10,7 @@ services:
     environment:
       - ASPNETCORE_URLS=http://+:80
   bc-api:
+    restart: always
     build:
       context: .
       dockerfile: "BC.API/Dockerfile"
@@ -20,6 +22,7 @@ services:
       - sql-server
       - rabbitmq
   sql-server:
+    restart: always
     image: "mcr.microsoft.com/mssql/server"
     environment:
       SA_PASSWORD: "Password123"
@@ -27,6 +30,7 @@ services:
     volumes:
       - "./volumes/sql-server/data:/var/opt/mssql/data"
   rabbitmq:
+    restart: always
     image: "rabbitmq:3-management"
   bc-client:
     build:
@@ -34,15 +38,3 @@ services:
   bc-master:
     build:
       context: .
-  #  master:
-  #    build:
-  #      context: .
-  #      dockerfile: "BC.Master/Dockerfile"
-  #    ports:
-  #    - "5003:80"
-  #  saloon:
-  #    build:
-  #      context: .
-  #      dockerfile: "BC.Saloon/Dockerfile"
-  #    ports:
-  #    - "5004:80"
