Port changes for local start

--- a/BC.Common/workspace/package.json
+++ b/BC.Common/workspace/package.json
@@ -8,9 +8,9 @@
     "build-bc-client-local-02": "ng run bc-client:build:local-02",
     "build-bc-master-local-01": "ng run bc-master:build:local-01",
     "build-bc-master-local-02": "ng run bc-master:build:local-02",
-    "start-bc-client-local-01": "ng run bc-client:serve:local-01",
+    "start-bc-client-local-01": "ng run bc-client:serve:local-01 --port=4201",
     "start-bc-client-local-02": "ng run bc-client:serve:local-02",
-    "start-bc-master-local-01": "ng run bc-master:serve:local-01",
+    "start-bc-master-local-01": "ng run bc-master:serve:local-01 --port=4202",
     "start-bc-master-local-02": "ng run bc-master:serve:local-02",
     "nswag-master-list": "nswag run ./projects/bc-common/src/lib/api-client/master-list/nswag.json",
     "nswag-authentication": "nswag run ./projects/bc-common/src/lib/api-client/authentication/nswag.json",
